--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,10 @@
 
   <!-- Seleccion de personaje -->
   <div id="seleccion" class="seleccion animated fadeIn fast" align="center">
-
+    <!-- Botón de notificaciones -->
+    <button class="btn-noti-activadas">Notificaciones Activadas</button>
+    <button class="btn-noti-desactivadas">Notificaciones Desactivadas</button>
+    <!-- Fin de boton de notificaciones -->
     <div>
       <img data-user="spiderman" src="img/avatars/spiderman.jpg" alt="spiderman" class="seleccion-avatar">
     </div>
